# rancher-ms

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.musl
.github/workflows/: pipeline.yaml  pipeline.yaml.new
k8s/: 0_project.yaml  1_namespace.yaml  2_deployment.yaml  3_service.yaml  k8s_instructions.txt  rancher_config.yaml
k8s_dog/: 1_namespace.yaml  2_deployment.yaml  3_service.yaml
k8s_logging/: 1_namespace.yaml  2_fluentd_config.yaml  2_fluentd_config_no_filter.yaml  3_fluentd_daemonset.yaml
src/: listen.rs  main.rs
