[package]
name = "rancher-ms"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
# axum-extra = { version = "0.7.2", features = ["typed-routing"] }
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "signal"] }
axum-prometheus = "0.5.0"
anyhow = "1.0.69"
tower-http = { version = "0.5.0", default-features = false, features = ["trace", "cors"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["json"] }
dotenv = "0.15.0"
# dotenvy = "0.15"
chrono = { version = "0.4.24", features = ["serde"] }

[dev-dependencies]
assert2 = "0.3.10"
ctor = "0.2.0"